Forward to a url

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Please wait ...</h1>
+<!-- <p>I'm hosted with GitHub Pages.</p> -->
+<script>
+  window.open("https://cafebazaar.ir/app/com.namini.yahtzee","_self")
+</script>
 </body>
 </html>
