Forward to bazaar link

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <h1>Please wait ...</h1>
 <!-- <p>I'm hosted with GitHub Pages.</p> -->
 <script>
-  window.open("https://cafebazaar.ir/app/com.namini.yahtzee","_self")
+  window.location.replace("https://cafebazaar.ir/app/com.namini.yahtzee");
 </script>
 </body>
 </html>
